# Paddle

./: CMakeLists.txt
cmake/: operators.cmake
paddle/fluid/framework/: lod_tensor.h  operator.cc  operator.h  tensor.cc  tensor.h  tensor_extension.h  tensor_util.cc
paddle/fluid/framework/ir/: fc_gru_fuse_pass.cc  fc_lstm_fuse_pass.cc  graph_pattern_detector.cc  graph_pattern_detector.h
paddle/fluid/framework/ir/mkldnn/: cpu_quantize_pass.cc  cpu_quantize_pass.h  cpu_quantize_pass_tester.cc  cpu_quantize_squash_pass.cc  cpu_quantize_squash_pass.h  cpu_quantize_squash_pass_tester.cc
paddle/fluid/inference/api/: mkldnn_quantizer_config.cc
paddle/fluid/inference/tests/: test.cmake
paddle/fluid/inference/tests/api/: CMakeLists.txt  analyzer_int8_ernie_tester.cc  analyzer_int8_image_classification_tester_bk.cc  full1_ILSVRC2012_val_preprocess.py  (+7 more)
paddle/fluid/inference/utils/: CMakeLists.txt
paddle/fluid/operators/: batch_norm_op.cc  sum_op.cc  transpose_op.cc
paddle/fluid/operators/fused/: fusion_gru_op.cc  fusion_gru_op.h
paddle/fluid/operators/mkldnn/: batch_norm_mkldnn_op.cc  conv_mkldnn_op.cc  conv_transpose_mkldnn_op.cc  fc_mkldnn_op.cc  fc_mkldnn_op_mgallus_newest.cc  fusion_gru_mkldnn_op.cc  original_conv_mkldnn_op.cc  refactor_conv_mkldnn_op.cc  requantize_mkldnn_op.cc  softmax_mkldnn_op.cc  sum_mkldnn_op.cc  transpose_mkldnn_op.cc
paddle/fluid/platform/: flags.cc  gpu_info.cc  mkldnn_helper.h  mkldnn_reuse.h
paddle/fluid/pybind/: global_value_getter_setter.cc
python/: requirements.txt
python/paddle/fluid/: __init__.py  framework.py  op.py
(+39 files in other folders)
